Fix dots, too low

--- a/public/css/slick-theme.css
+++ b/public/css/slick-theme.css
@@ -123,7 +123,7 @@
 .slick-dots
 {
     position: absolute;
-    bottom: -30px;
+    bottom: -25px;
 
     display: block;
 
